--- a/SIApps/src/pages/side-menu/side-menu.html
+++ b/SIApps/src/pages/side-menu/side-menu.html
@@ -1,18 +1,24 @@
-<!--
-  Generated template for the SideMenu page.
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons left>
+        <button ion-button style="color: white;font-size: x-small;">
+          <img src="img/LogoSIS.png" style="margin-left: 1%;width: 15%" />
+          <ion-icon name="person" style="margin-left: 2%"></ion-icon> Indra Setiawan
+        </button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <ion-content>
+    <ion-list>
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+    </ion-list>
+  </ion-content>
 
-  <ion-navbar>
-    <ion-title>SideMenu</ion-title>
-  </ion-navbar>
+</ion-menu>
 
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
