--- a/SIApps/src/pages/lead-indicator/lead-indicator.html
+++ b/SIApps/src/pages/lead-indicator/lead-indicator.html
@@ -8,5 +8,10 @@
  -->
 
 <ion-content padding>
-
+  <ion-list>
+    <button ion-item *ngFor="let item of items" icon-right color="light" full (click)="itemSelected(item)">
+      {{ item.title }}
+      <ion-icon name="arrow-forward" class="icons"></ion-icon>
+    </button>
+  </ion-list>
 </ion-content>
