--- a/SIApps/src/pages/pro-achieve-by-process-obr/pro-achieve-by-process-obr.html
+++ b/SIApps/src/pages/pro-achieve-by-process-obr/pro-achieve-by-process-obr.html
@@ -9,10 +9,10 @@
 
 
 <ion-content padding>
-  <ion-list>
+  <!-- <ion-list>
     <button ion-item *ngFor="let item of items" icon-right color="light" full (click)="itemSelected(item)">
       {{ item.title }}
       <ion-icon name="arrow-forward" class="icons"></ion-icon>
     </button>
-  </ion-list>
+  </ion-list> -->
 </ion-content>
